--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -41,6 +41,6 @@
 }
 
 .chip {
-    background-color: var(--color-black);
-    color: white;
+    background-color: var(--color-black) !important;
+    color: white !important;
 }
